--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-debugbar": "^3.1",
         "davejamesmiller/laravel-breadcrumbs": "^4.2",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
@@ -14,6 +15,7 @@
         "owen-it/laravel-auditing": "^4.1",
         "prettus/l5-repository": "^2.6",
         "santigarcor/laratrust": "^4.0",
+        "uxweb/sweet-alert": "^1.4",
         "watson/active": "^2.0"
     },
     "require-dev": {
